...

    <!-- Activity and fragment titles -->
    <string name="provider_authority" translatable="false">com.explorads.podcast.provider</string>
    <string name="feed_update_receiver_name">Update subscriptions</string>
    <string name="feeds_label">Podcasts</string>
    <string name="statistics_label">Statistics</string>
    <string name="add_feed_label">Add podcast</string>
    <string name="episodes_label">Episodes</string>
    <string name="home_label">Home</string>
    <string name="queue_label">Queue</string>
    <string name="inbox_label">Inbox</string>
    <string name="favorite_episodes_label">Favorites</string>
    <string name="settings_label">Settings</string>
    <string name="downloads_label">Downloads</string>
    <string name="open_autodownload_settings">Open settings</string>
    <string name="downloads_log_label">Download log</string>
    <string name="subscriptions_label">Subscriptions</string>
    <string name="subscriptions_list_label">Subscriptions list</string>
    <string name="cancel_download_label">Cancel download</string>
    <string name="playback_history_label">Playback history</string>
    <string name="episode_cache_full_title">Episode cache full</string>
    <string name="episode_cache_full_message">The episode cache limit has been reached. You can increase the cache size in the Settings.</string>
    <string name="years_statistics_label">Years</string>
    <string name="notification_pref_fragment">Notifications</string>
    <string name="recently_played_episodes">Recently played episodes</string>

...
    <string name="clear_history_label">Clear history</string>
    <string name="clear_playback_history_msg">This will clear the entire playback history. Are you sure you want to proceed?</string>
    <string name="remove_history_label">Remove from history</string>
    <string name="removed_history_label">Removed from history</string>

    <!-- Other -->
    <string name="confirm_label">Confirm</string>
    <string name="cancel_label">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reset">Reset</string>
    <string name="global_default">Global default</string>
    <string name="url_label">URL</string>
...
